# pyFracturedJSON

./: .gitignore  CHANGELOG.md  Cargo.toml  FracturedJSON.py  README.md  fractured_json.py  fractured_json_rust_wrapper.pyi  pyproject.toml  tester.py  testing.ipynb
.github/workflows/: publish.yml
fracturedjson/: __init__.py  _rust_wrapper.pyi
pyFracturedJSON/: __init__.py
src/: lib.rs
tests/: common.py  default_settings.json  package-lock.json  package.json  test_basic_output.py  test_builtin_wrapper.py
tests/JSONs/: compact_array_complexity_0.json  compact_array_complexity_1.json  indent_2.json  indent_3.json  inline_complexity_0.json  inline_complexity_1.json  line_len_100.json  line_len_40.json  number_list_alignment_decimal.json  number_list_alignment_left.json  number_list_alignment_normalize.json  number_list_alignment_right.json  table_row_complexity_0.json  table_row_complexity_1.json
