[project]
name = "pyfracturedjson"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"


[tool.ruff.lint]
extend-select = [
    "BLE",  # Blind exceptions
    "FBT",  # Boolean trap
    "A",    # Builtin shadowing
    "C4",   # Comprehensions
    "LOG",  # Logging
    "G",    # Logging formatting
    "PT",   # Pytest
    "SIM",  # Simplifications
    "TID",  # Tidy imports
    "PTH",  # Use Pathlib instead of os.path etc
    "I",    # isort
    "C901", # flake8-c901 complexity
]