[project]
name = "pyfracturedjson"
requires-python = ">=3.9"
description = "A compact yet readable JSON formatter"
readme = "README.md"
packages = ["fracturedjson"]

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
keywords = ["json", "formatter", "fracturedjson", "compact", "readable"]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/g-b-f/pyFracturedJSON"

[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[tool.mypy]
check_untyped_defs = true
follow_untyped_imports = true

[tool.pytest.ini_options]
filterwarnings = ["error"]

[tool.maturin]

include = ["fracturedjson/*"] 


[tool.ruff.lint]
extend-select = [
    "BLE",  # Blind exceptions
    "FBT",  # Boolean trap
    "A",    # Builtin shadowing
    "C4",   # Comprehensions
    "LOG",  # Logging
    "G",    # Logging formatting
    "PT",   # Pytest
    "SIM",  # Simplifications
    "TID",  # Tidy imports
    "I",    # isort
    "C901", # flake8-c901 complexity
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
